--- a/itinerario.html
+++ b/itinerario.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Itinerario - Rutopia</title>
+    <title data-i18n="itinerary.title">Mi Itinerario - Rutopia</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/itinerario.css">
+    <script src="js/i18n-browser.js"></script>
 </head>
 <body class="bg-gray-900 bg-pattern text-white">
 
